style.css
:root {
    --main-font: 'Playfair Display', serif;
    --secondary-font: 'Poppins', sans-serif;
    --background-color: #F9F7FE;
    --secondary-heading-color: #272142;
    --button-color: #6C63FF;
}

.hero {
    background-color: var(--background-color);
    text-align: center;
    padding: 160px 24px;
}

h1, h2 {
    text-align: center;
}

h1 {
    font-family: var(--main-font);
    font-size: 96px;
    font-weight: bold;
}

.hero h2 {
    font-family: var(--secondary-font);
    font-weight: normal;
    font-size: 24px;
    color: var(--secondary-heading-color);
    padding: 10px;
    margin: 24px;
}

.greetings {
    font-family: var(--secondary-font);
    font-weight: bold;
    font-size: 36px;
    color: var(--secondary-heading-color);
}

.btn {
    font-family: var(--secondary-font);
    font-size: 18px;
    font-weight: normal;
    background-color: var(--button-color);
    border-radius: 4px;
    margin: 25px;
    padding: 18px 46px;
}

.container h2 {
    color: black;
    font-family: var(--main-font);
    font-weight: bold;
    font-size: 64px;
    text-align: left;
    margin-top: 95px;
    margin-bottom: 55px;
}

.container p  {
    font-weight: normal;
    line-height: 1.7;
    text-align: left;
    opacity: 70%;
    line-height: 30px;
}

.header-second-page {
    text-align: center;
    font-family: var(--secondary-font);
    font-size: 18;
    font-weight: normal;
    margin-top: 125px;
    margin-bottom: 82px;
}

.container .btn {
    color: var(--button-color);
    margin-left: 0;
    background-color: white;
}


@media (max-width: 960px) {
    .hero {
        padding: 100px 16px;
    }

    h1 {
        font-size: 50px;
    }

    .header-second-page {
        margin-top: 20px;
        margin-bottom: 20px;
    }
    
      .container h2  {
            margin: 20px;
            text-align: center;
            font-size: 36px;
        }

        .container {
            text-align: center;
            display: inline;
        }

        .container p {
            margin-left: 10px;
            margin-right: 10px;
            text-align: center;
        }

    }


/*about-page*/

    .flex-container {
        display: flex;
        justify-content: space-evenly;
        padding: 90px;
        margin: 140px;
      }

      .about-info {
        width: 506px;
        text-align: left;
        margin-right: 94px;
      }

      .about-info h1 {
        font-size: 64px;
        text-align: left ; 
      }

      .about-info p {
        font-family: var(--secondary-font);
        font-weight: normal;
        font-size: 16px;
        line-height: 30px;

      }

      .about-info h2 {
        font-family: var(--secondary-font);
        font-size: 18px;
        font-weight: bold;
        text-align: left;
      }

      .about-info .btn {
        margin-left: 0;
      }

      .about-photo {
        border-radius: 25px;
        box-shadow: 0px 5px 8px grey;
      }
    

